--- a/_layout/home.html
+++ b/_layout/home.html
@@ -7,6 +7,10 @@ layout: default
     <h1 class="page-heading">{{ page.title }}</h1>
   {%- endif -%}
 
+<div class="hero">
+  {{ page.hero_text }}
+</div>
+
   {{ content }}
 
 
